--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v2
+
     - name: Turnstyle
       if: ${{ github.event_name == 'push' && github.ref == 'refs/head/trunk' }}
       uses: softprops/turnstyle@v1
